# 112

./: .editorconfig  .env.example  .gitattributes  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  SECURITY.md  SUPPORT.md  docker-compose.yml  lerna.json  package.json
.devcontainer/: devcontainer.json  docker-compose.yml
.github/: labels.yml  pull_request_template.md
ai-service/: .env.example  Dockerfile  README.md  requirements.txt
apps/: README.md
config/: README.md
contracts/: README.md
docker/: README.md  compose.dev.yml  compose.monitoring.yml  compose.test.yml  compose.tools.yml
docs/: ARCHITECTURE.md  Architecture.md  README.md  Vision.md  architecture.md  operations.md
environments/: README.md  development.env.example  local.env.example  production.env.example  stage.env.example  test.env.example
infrastructure/: README.md
kubernetes/: README.md
libraries/: README.md
scripts/: README.md  bootstrap.sh  build.sh  deploy-dev.sh  deploy-prod.sh  deploy-stage.sh  generate_platform.py  lint.sh  reset-environment.sh  run-local.sh  test.sh  validate_architecture.py  validate_docs.py  validate_versions.py  verify-architecture.sh  verify-versions.sh  verify.sh
services/ai-service/: Dockerfile  README.md  pyproject.toml  requirements.txt
services/ai-service/app/: main.py
services/ai-service/app/routers/: classify.py  ner.py  transcribe.py
services/ai-service/helm/: Chart.yaml  values.yaml
services/ai-service/helm/templates/: deployment.yaml  service.yaml
(+1026 files in other folders)
