[tool.poetry]
name = "ai-service"
version = "0.1.0"
description = "AI service: transcription, NER, classification and address/phone extraction"
authors = ["EASUR Team <devops@easur.local>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
uvicorn = {extras=["standard"], version="^0.22.0"}
whisper = "^20230628" 
spacy = "^3.8.0"
torch = "^2.2.0"
transformers = "^4.40.0"
python-multipart = "^0.0.6"
pydantic = "^1.10.12"
typing-extensions = "^4.9.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
